--- a/src/Component/user.module.css
+++ b/src/Component/user.module.css
@@ -3,11 +3,14 @@
     position: fixed;
     flex-direction: column;
     align-items: center;
+    padding-top: 56px;
     left: 0;
     top: 0;
     height: 100vh;
     width: 400px;
-    border: 1px solid #959595;
+    gap: 32px;
+    box-shadow: 1px 1px 4px #1a1a1a;
+    background-color: #272727;
 }
 
 .profilePic {
